add loader component & install react-query for better loading/error handling and implement it in getItem component + disable btn

--- a/frontend/src/components/ui/Button/Button.module.css
+++ b/frontend/src/components/ui/Button/Button.module.css
@@ -19,3 +19,9 @@
   color: #0175c8;
   border: 1px solid #0175c8;
 }
+
+.btnDisabled {
+  background-color: #808080;
+  pointer-events: none;
+  user-select: none;
+}
